import { render, screen } from '@testing-library/react';
import wait from 'waait';
import CartCount from '../components/CartCount';
import { snapshotHTML } from '../lib/testUtils';

describe('<CartCount/>', () => {
  it('Renders', () => {
    render(<CartCount count={10} />);
  });
  it('matches snapshot', () => {
    const { container } = render(<CartCount count={11} />);
    expect(snapshotHTML(container)).toMatchSnapshot();
  });
  it('updates via props', async () => {
    const { container, rerender, debug } = render(<CartCount count={11} />);
    expect(container.textContent).toBe('11');
    // update the props
    rerender(<CartCount count="12" />);
    // wait for the animation(milliseconds) to finish
    expect(container.textContent).toBe('1211');
    await wait(400);
    expect(container.textContent).toBe('12');
    expect(snapshotHTML(container)).toMatchSnapshot();
  });
});
