// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches snapshot 1`] = `
<div>
  <span
    class="sc-8353ba04-1 KHXoz"
  >
    <div>
      <div
        class="sc-8353ba04-0 ckkAPa"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> updates via props 1`] = `
<div>
  <span
    class="sc-8353ba04-1 KHXoz"
  >
    <div>
      <div
        class="sc-8353ba04-0 ckkAPa count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
